[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"
authors = ["rust-api contributors"]
description = "日本語対応のRust WebAPIサーバー"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
